red border overlap fix

--- a/src/App.css
+++ b/src/App.css
@@ -1215,8 +1215,8 @@ img, span, button {
   left: 0; top: 0;
   width: 5px; height: 28px;
   background-color: #363636;
-  border-top-left-radius: 7px;
-  border-bottom-left-radius: 7px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 /* Grip bands */
